Update Cursussen “2019-11-07-humor”

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -3,8 +3,8 @@ title: humor
 date: 2019-11-07T10:09:17.823Z
 category: volwassenen
 description: ttttt
-thumb: /assets/img/martin-parr-common-sese-klein.jpg
-img: /assets/img/martin-parr-common-sense-benidorm-1997.jpg
+thumb: /assets/img/martin-parr_-thumb.jpg
+img: /assets/img/martin-parr-snow-polo-world-cup.-st-moritz.-2011.-from-luxury.jpg
 caption: 'Martin Parr, Common Sense, Benidorm Spain. 1997'
 amount: '6'
 time: 19.30 -21.30
