Update Cursussen “2019-11-07-humor”

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -3,9 +3,9 @@ title: humor
 date: 2019-11-07T10:09:17.823Z
 category: volwassenen
 description: ttttt
-thumb: /assets/img/martin-parr_-thumb.jpg
-img: /assets/img/martin-parr-snow-polo-world-cup.-st-moritz.-2011.-from-luxury.jpg
-caption: 'Martin Parr, Common Sense, Benidorm Spain. 1997'
+thumb: /assets/img/martin-parr-galway-races.-1997_thumb.jpg
+img: /assets/img/martin-parr-galway-races.-ireland-1997.-from-luxury.jpg
+caption: 'Martin Parr, Galway Races. Ireland 1997. From Luxury '
 amount: '6'
 time: 19.30 -21.30
 start: 19 februari 2020
