Update Cursussen “2019-11-07-humor”

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -5,7 +5,9 @@ category: volwassenen
 description: ttttt
 thumb: /assets/img/martin-parr-galway-races.-1997_thumb.jpg
 img: /assets/img/martin-parr-galway-races.-ireland-1997.-from-luxury.jpg
-caption: 'Martin Parr, Galway Races. Ireland 1997. From Luxury '
+caption: >-
+  Martin Parr, Galway Races. Ireland 1997. From Luxury . Courtesy of Magnum
+  Photos
 amount: '6'
 time: 19.30 -21.30
 start: 19 februari 2020
