--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -1,5 +1,5 @@
 ---
-title: humor
+title: humor in fotografie
 date: 2019-11-07T10:09:17.823Z
 category: volwassenen
 description: ttttt
@@ -8,9 +8,9 @@ img: /assets/img/martin-parr-galway-races.-ireland-1997.-from-luxury.jpg
 caption: >-
   Martin Parr, Galway Races. Ireland 1997. From Luxury . Courtesy of Magnum
   Photos
-amount: '6'
+amount: 6 lessen
 time: 19.30 -21.30
-start: 19 februari 2020
+start: woensdag 19 februari 2020
 location: 'Buurthuis De Boog, Gambiadreef 60 Utrecht'
 price: '275,-'
 inc: lesmateriaal
