--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -2,7 +2,7 @@
 title: humor in fotografie
 date: 2019-11-07T10:09:17.823Z
 category: volwassenen
-description: lachen
+description: lachen pfffffff
 thumb: /assets/img/martin-parr-galway-races.-1997_thumb.jpg
 img: /assets/img/martin-parr-galway-races.-ireland-1997.-from-luxury.jpg
 caption: >-
