Update Cursussen “2019-11-07-humor”

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -15,4 +15,4 @@ location: 'Buurthuis De Boog, Gambiadreef 60 Utrecht'
 price: '275,-'
 inc: lesmateriaal
 ---
-vvvv
+Sinds de komst van dada in 1916 speelt humor een grote rol in de kunst, wat heeft gezorgd voor een nieuwe, frisse wind binnen de vaak ernstige en hoogdravende kunstwereld.
