--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -2,7 +2,11 @@
 title: humor in fotografie
 date: 2019-11-07T10:09:17.823Z
 category: volwassenen
-description: 'Grappige foto’s maken kan je leren! '
+description: >
+  Grappige foto’s maken kan je leren! Of toch niet?
+
+  Hoe doe je dat, een humoristisch beeld maken? Door straatfotografie?
+  Enscenering?
 thumb: /assets/img/martin-parr-galway-races.-1997_thumb.jpg
 img: /assets/img/martin-parr-galway-races.-ireland-1997.-from-luxury.jpg
 caption: >-
