--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -2,6 +2,7 @@
 title: humor in fotografie
 date: 2019-11-07T10:09:17.823Z
 category: volwassenen
+type: ''
 description: Een fotografisch onderzoek naar verschillende facetten van humoristisch beeld.
 thumb: /assets/img/martin-parr-galway-races.-1997_thumb.jpg
 img: /assets/img/martin-parr-galway-races.-ireland-1997.-from-luxury.jpg
@@ -16,9 +17,3 @@ price: '275,-'
 inc: lesmateriaal
 ---
 Sinds de komst van dada in 1916 speelt humor een grote rol in de kunst, wat heeft gezorgd voor een nieuwe, frisse wind binnen de vaak ernstige en hoogdravende kunstwereld.
-
-
-
-Grappige foto’s maken kan je leren! Of toch niet?
-
-Hoe doe je dat, een humoristisch beeld maken? Door straatfotografie? Enscenering?
