Update Cursussen “2019-11-07-humor”

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -16,4 +16,8 @@ location: 'Buurthuis De Boog, Gambiadreef 60 Utrecht'
 price: '275,-'
 inc: lesmateriaal
 ---
-Sinds de komst van dada in 1916 speelt humor een grote rol in de kunst, wat heeft gezorgd voor een nieuwe, frisse wind binnen de vaak ernstige en hoogdravende kunstwereld.
+De focus van deze cursus ligt op beeldanalyse. 
+
+Sinds de komst van dada in 1916 speelt humor een grote rol in de kunst, wat heeft gezorgd voor een nieuwe, frisse wind binnen de vaak ernstige en hoogdravende kunstwereld. Humor werd gebruikt als middel om problemen aan de kaak te stellen.
+
+In deze cursus doen we onderzoek naar manieren waarop humor in beeld wordt gebracht. We maken analyses van verschillende fotografische disciplines en we proberen te achterhalen of humor de inhoud van een foto versterkt of juist niet. Is humor gekoppeld aan een boodschap of staat het los van een diepere interpretatie?In welke vorm van fotografie is humor functioneel? Door analyse, onderzoek en fotografische opdrachten proberen we deze vragen tijdens de lessen te beantwoorden.
