Update Cursussen “2019-11-07-humor”

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -8,7 +8,7 @@ img: /assets/img/martin-parr-galway-races.-ireland-1997.-from-luxury.jpg
 caption: >-
   Martin Parr, Galway Races. Ireland 1997. From Luxury. Courtesy of Magnum
   Photos
-amount: 6 lessen van 2 uur
+amount: 6 lessen van 2 uur om de week
 time: 19.30 -21.30
 start: woensdag 19 februari 2020
 location: 'Buurthuis De Boog, Gambiadreef 60 Utrecht'
