update price notation

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -12,7 +12,7 @@ amount: 6 lessen van 2 uur om de week
 time: 19.30 -21.30
 start: woensdag 19 februari 2020
 location: 'Buurthuis De Boog, Gambiadreef 60 Utrecht'
-price: '275,-'
+price: '275.-'
 inc: lesmateriaal
 ---
 De focus van deze cursus ligt op beeldanalyse. 
