Update Cursussen “2019-11-07-humor”

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -13,7 +13,7 @@ time: 19.30 -21.30
 start: woensdag 2 september 2020
 location: 'Buurthuis De Boog, Gambiadreef 60 Utrecht'
 price: 275.-
-inc: lesmateriaal
+inc: lesmateriaal en expositieruimte
 ---
 De focus van deze cursus ligt op beeldanalyse. 
 
