update margin and 2 posts

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -10,7 +10,7 @@ caption: >-
   Photos
 amount: 6 lessen van 2 uur om de week
 time: 19.30 -21.30
-start: woensdag 2 september 2020
+start: 2 september 2020
 location: 'Buurthuis De Boog, Gambiadreef 60 Utrecht'
 price: 275.-
 inc: lesmateriaal en expositieruimte
