Update Cursussen “2019-11-07-humor”

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -4,15 +4,13 @@ date: 2019-11-07T10:09:17.823Z
 visible: true
 category: volwassenen
 description: Een fotografisch onderzoek naar verschillende facetten van humoristisch beeld.
-thumb: /assets/img/martin-parr-galway-races.-1997_thumb.jpg
-img: /assets/img/martin-parr-galway-races.-ireland-1997.-from-luxury.jpg
-caption: >-
-  Martin Parr, Galway Races. Ireland 1997. From Luxury. Courtesy of Magnum
-  Photos
+thumb: /assets/img/liek-bouma-martini_site_thumb.jpg
+img: /assets/img/liek-bouma-martini.jpg
+caption: Liek Bouma, Zonder titel. 2020
 amount: 6 lessen van 2 uur om de week
 time: 19.30 -21.30
 start: 2 september 2020
-location: 'Buurthuis De Boog, Gambiadreef 60 Utrecht'
+location: Buurthuis De Boog, Gambiadreef 60 Utrecht
 price: 275.-
 inc: lesmateriaal en expositieruimte
 ---
