Update Cursussen “2019-11-07-humor”

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -6,7 +6,7 @@ category: volwassenen
 description: Een fotografisch onderzoek naar verschillende facetten van humoristisch beeld.
 thumb: /assets/img/liek-bouma-martini_site_thumb.jpg
 img: /assets/img/liek-bouma-martini.jpg
-caption: Liek Bouma, Zonder titel. 2020
+caption: Liek Bouma, Peeled not stirred. 2020
 amount: 6 lessen van 2 uur om de week
 time: 19.30 -21.30
 start: 2 september 2020
