Update Cursussen “2019-11-07-humor”

--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -1,7 +1,7 @@
 ---
 title: humor in fotografie
 date: 2019-11-07T10:09:17.823Z
-visible: true
+visible: false
 category: volwassenen
 description: Een fotografisch onderzoek naar verschillende facetten van humoristisch beeld.
 thumb: /assets/img/liek-bouma-martini_site_thumb.jpg
