--- a/_posts/2019-11-07-humor.md
+++ b/_posts/2019-11-07-humor.md
@@ -7,7 +7,7 @@ description: Een fotografisch onderzoek naar verschillende facetten van humorist
 img: /assets/img/liek-bouma-martini.jpg
 caption: Liek Bouma, Peeled not stirred. 2020
 amount: 6 lessen van 2 uur om de week
-time: 19.30 -21.30
+time: 19:30 - 21:30
 start: 2 september 2020
 location: Buurthuis De Boog, Gambiadreef 60 Utrecht
 price: 275.-
